<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.azhen.bikingapp.PersonalStatsActivity"
    android:background="#ffcbcbcb"
    android:backgroundTint="#4e41ff00">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/stats"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:id="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/HeightText"
        android:id="@+id/HeightTextView"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="31dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/WeightText"
        android:id="@+id/WeightTextView"
        android:layout_below="@+id/HeightTextView"
        android:layout_alignStart="@+id/HeightTextView"
        android:layout_marginTop="38dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/AgeText"
        android:id="@+id/AgeTextView"
        android:layout_below="@+id/WeightTextView"
        android:layout_alignStart="@+id/WeightTextView"
        android:layout_marginTop="30dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:layout_marginStart="37dp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/WeightTextView"
        android:id="@+id/HeightEditText"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:background="#ffffff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:id="@+id/WeightEditText"
        android:inputType="numberDecimal"
        android:layout_alignTop="@+id/WeightTextView"
        android:layout_alignStart="@+id/HeightEditText"
        android:gravity="center"
        android:background="#ffffff" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:id="@+id/AgeEditText"
        android:gravity="center"
        android:background="#ffffff"
        android:layout_alignBottom="@+id/AgeTextView"
        android:layout_alignStart="@+id/WeightEditText"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/GenderText"
        android:id="@+id/GenderTextView"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/AgeTextView"
        android:layout_alignStart="@+id/AgeTextView" />

   <RadioGroup
        android:id="@+id/GenderRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
       android:layout_alignBottom="@+id/GenderTextView"
       android:layout_alignStart="@+id/AgeEditText">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MaleText"
            android:id="@+id/MaleRadioButton"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FemaleText"
            android:id="@+id/FemaleRadioButton" />
    </RadioGroup>


</RelativeLayout>
