<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.azhen.bikingapp.BikeTrackerActivity"
    android:background="#ffcbcbcb"
    android:backgroundTint="#4000fff3">



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bike"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:id="@+id/imageView2" />



    <GridLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/imageView2"
        android:id="@+id/gridLayout">
        <TextView
            android:id="@+id/averageSpeedTextView"
            android:text="@string/averageSpeedText"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/averageSpeedEditText"
            android:text="15km/h"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_rowSpan="2" />


        <TextView
            android:id="@+id/averageInclineTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/averageInclineText"
            android:layout_row="3"
            android:layout_column="0" />
        <EditText
            android:id="@+id/averageInclineEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10 deg"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_rowSpan="2" />

    </GridLayout>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/updateButton"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="23dp">


        <ImageButton
            android:id="@+id/imageButton"
            android:src="@drawable/emoticon_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00ffffff" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:src="@drawable/emoticon_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00ffffff"/>

        <ImageButton
            android:id="@+id/imageButton3"
            android:src="@drawable/emoticon_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00ffffff"/>

        <ImageButton
            android:id="@+id/imageButton4"
            android:src="@drawable/emoticon_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00ffffff"/>

        <ImageButton
            android:id="@+id/imageButton5"
            android:src="@drawable/emoticon_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00ffffff"/>
    </TableRow>


    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gridLayout"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dateDateText"
            android:id="@+id/dateDateTextView"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/elapsedTimeText"
            android:id="@+id/dateTimeTextView"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tableRow4">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dateDateEditText"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dateTimeEditText"
            android:visibility="gone"/>

        <TextClock
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textClock"
            android:layout_weight="1"/>

    </TableRow>


    <Button
        android:text="New Button"
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
